update spacing on accordion, formvalidation; add local state to listtab nav to show underlined the button users clicked; update sequencebuilder to appear if there is also a title from sequencecreate; add more custom scss, although not much - just change font and update homepage css; correct cover default and jjd-cover images

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,3 +1,8 @@
 .cover {
   background: top /cover no-repeat url('../images/cover.png')
 }
+
+.title {
+  background: radial-gradient(rgba(231, 237, 252, 0.8), rgba(255, 255, 255, 0));
+  border-radius: 5rem;
+}
